--- a/download_centre.html
+++ b/download_centre.html
@@ -1,87 +1,87 @@
 <!DOCTYPE html>
-<html lang="en-GB"> <!-- Define the language of the document -->
+<html lang="en-GB">
 <head>
-    <meta charset="UTF-8"> <!-- Define character encoding for the document -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the viewport for responsive design -->
-    <meta name="description" content="This is the Hackboto Tech Tips download centre, this is where you can download all of the files that I have created and am distributing via this website.">
-    <meta name="keywords" content="Downloads, Scripts, Utilities, Files">
-    <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
-    <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>Download Centre | Hackboto Tech Tips</title> <!-- Document title -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="This is the Hackboto Tech Tips download centre, this is where you can download all of the files that I have created and am distributing via this website.">
+	<meta name="keywords" content="Downloads, Scripts, Utilities, Files">
+	<meta name="robots" content="index, follow">
+	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="icon" type="image/x-icon" href="favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="scripts.js"></script> <!--JavaScript-->
+	<title>Download Centre | Hackboto Tech Tips</title>
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="download_centre.html" class="active" title="Find file downloads here.">Download Centre</a>
-                <a href="contact.html" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-    <br>
-    <section title="Download Centre"> <!-- Section for download centre-->
-        <div class="welcometext">
-            <h1>Download Centre</h1> <!-- Page heading -->
-            <p>This is where you can find all of the software that I am currently distributing, below you will find the latest versions of all my software.</p> <!-- Page description -->
-            <p>By downloading or using any of the software that I am distributing, you have agreed to the terms and conditions that I have set out in the legal section of this website.</p>
-        </div>
-    </section>
-    <hr>
-    <section class="articles" title="Articles"> <!-- Section for articles -->
-        <h2>Downloads</h2> <!-- Section heading -->
-        <div class="articlerow"> <!-- Article row -->
-            <div class="articlecolumn" title="Settings Optimiser"> <!-- Article column -->
-                <h3>Settings Optimiser Scripts</h3> <!-- Article title -->
-                <hr>
-                <p>The Hackboto Tech Tips Settings Optimiser will optimise the settings on your Windows 10/ 11 based PC so that your personal data is more secure, you have less bloatware, advertisements, AI, etc to ensure that your PC runs as efficiently as possible.</p> <!-- Article excerpt -->
-                <a href="download_centre/settings_optimiser.html" title="Visit Settings Optimiser">Download Page</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" title="Windows Optimiser"> <!-- Article column -->
-                <h3>Windows Optimiser</h3> <!-- Article title -->
-                <hr>
-                <p>Download the Hackboto Tech Tips Windows Optimiser, improve the performance of your Windows 10/ 11 PC by removing old files, system level corruption, and old error logs.</p> <!-- Article excerpt -->
-                <a href="download_centre/windows_optimiser.html" title="Visit the Windows Optimiser download page">Download Page</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" title="MPO Fix"> <!-- Article column -->
-                <h3>MPO Fix .reg</h3> <!-- Article title -->
-                <hr>
-                <p>Download and learn to use the Multi-Plane Overlay Fix Registry Files. These files can be used to fix the black artifacts and black screen issues that are often associated Hardware Acceleration.</p> <!-- Article excerpt -->
-                <a href="download_centre/multi-pane_overlay_disable_reg.html" title="Visit MPO Fix download page">Download Page</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" title="POPCNT Checker"> <!-- Article column -->
-                <h3>POPCNT Checker</h3> <!-- Article title -->
-                <hr>
-                <p>Download the Hackboto Tech Tips POPCNT Checker program, learn if your computer system is ready for Windows 11 24H2 by checking to see if it supports the POPCNT CPU instruction.</p> <!-- Article excerpt -->
-                <a href="download_centre/popcnt_checker.html" title="Visit POPCNT Checker download page">Download Page</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" title="Windows 11 Requirement Bypass"> <!-- Article column -->
-                <h3>Windows 11 Requirement Bypass Tool</h3> <!-- Article title -->
-                <hr>
-                <p>Download the Hackboto Tech Tips Windows 11 Requirement Bypass Tool to upgrade your "unsupported" computer to the latest version of Windows 11 from the click of a button.</p> <!-- Article excerpt -->
-                <a href="download_centre/win11_requirement_bypass_tool.html" title="Visit Windows 11 Requirement Bypass Tool download page">Download Page</a> <!-- Link to full article -->
-            </div>
-        </div>
-    </section>
-    <footer title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer> 
+	<div class="sticky">
+		<header> <!--Header-->
+			<p>Hackboto Tech Tips</p>
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="index.html" title="Go to Home">Home</a>
+				<a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="download_centre.html" class="active" title="Find file downloads here.">Download Centre</a>
+				<a href="contact.html" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	<br>
+	<section title="Download Centre">
+		<div class="welcometext">
+			<h1>Download Centre</h1>
+				<p>This is where you can find all of the software that I am currently distributing, below you will find the latest versions of all my software.</p>
+				<p>By downloading or using any of the software that I am distributing, you have agreed to the terms and conditions that I have set out in the legal section of this website.</p>
+		</div>
+	</section>
+	<hr>
+	<section class="articles" title="Articles"> 
+		<h2>Downloads</h2>
+		<div class="articlerow">
+			<div class="articlecolumn" title="Settings Optimiser">
+				<h3>Settings Optimiser Scripts</h3>
+				<hr>
+				<p>The Hackboto Tech Tips Settings Optimiser will optimise the settings on your Windows 10/ 11 based PC so that your personal data is more secure, you have less bloatware, advertisements, AI, etc to ensure that your PC runs as efficiently as possible.</p>
+				<a href="download_centre/settings_optimiser.html" title="Visit Settings Optimiser">Download Page</a>
+			</div>
+			<div class="articlecolumn" title="Windows Optimiser">
+				<h3>Windows Optimiser</h3>
+				<hr>
+				<p>Download the Hackboto Tech Tips Windows Optimiser, improve the performance of your Windows 10/ 11 PC by removing old files, system level corruption, and old error logs.</p>
+				<a href="download_centre/windows_optimiser.html" title="Visit the Windows Optimiser download page">Download Page</a>
+			</div>
+			<div class="articlecolumn" title="MPO Fix">
+				<h3>MPO Fix .reg</h3>
+				<hr>
+				<p>Download and learn to use the Multi-Plane Overlay Fix Registry Files. These files can be used to fix the black artifacts and black screen issues that are often associated Hardware Acceleration.</p>
+				<a href="download_centre/multi-pane_overlay_disable_reg.html" title="Visit MPO Fix download page">Download Page</a>
+			</div>
+			<div class="articlecolumn" title="POPCNT Checker">
+				<h3>POPCNT Checker</h3>
+				<hr>
+				<p>Download the Hackboto Tech Tips POPCNT Checker program, learn if your computer system is ready for Windows 11 24H2 by checking to see if it supports the POPCNT CPU instruction.</p>
+				<a href="download_centre/popcnt_checker.html" title="Visit POPCNT Checker download page">Download Page</a>
+			</div>
+			<div class="articlecolumn" title="Windows 11 Requirement Bypass">
+				<h3>Windows 11 Requirement Bypass Tool</h3>
+				<hr>
+				<p>Download the Hackboto Tech Tips Windows 11 Requirement Bypass Tool to upgrade your "unsupported" computer to the latest version of Windows 11 from the click of a button.</p>
+				<a href="download_centre/win11_requirement_bypass_tool.html" title="Visit Windows 11 Requirement Bypass Tool download page">Download Page</a>
+			</div>
+		</div>
+	</section>
+	<footer title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!--Copyright-->
+		</div>
+		<div class="footerbuttons">
+			<a href="map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer> 
 </body>
 </html>
