--- a/download_centre/popcnt_checker.html
+++ b/download_centre/popcnt_checker.html
@@ -1,78 +1,76 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is the download page for the Hackboto Tech Tips Settings Optimiser.">
-    <meta name="keywords" content="Software, checker, Windows 11, 24H2, popcnt">
-    <meta name="robots" content="index, follow">
-    <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>POPCNT Checker | Hackboto Tech Tips</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="This is the download page for the Hackboto Tech Tips Settings Optimiser.">
+	<meta name="keywords" content="Software, checker, Windows 11, 24H2, popcnt">
+	<meta name="robots" content="index, follow">
+	<link rel="stylesheet" href="../stylesheet.css"> <!--stylesheet -->
+	<link rel="icon" type="image/x-icon" href="../favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="../scripts.js"></script> <!--JavaScript-->
+	<title>POPCNT Checker | Hackboto Tech Tips</title>
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="../index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="../pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="../download_centre.html" class="active" title="Find file downloads here.">Download Centre</a>
-                <a href="../contact.html" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-      <aside title="Page Navigation"> <!-- Aside section for additional content -->
-        <h2>Page Navigation</h2>
-        <hr>
-        <ul>
-            <li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
-            <li><a href="#function" title="Jump to Function">Functions</a></li>
-            <li><a href="#download" title="Jump to download process">Download</a></li>
-            <li><a href="#how-to-use" title="Jump to user guide">User Guide</a></li>
-        </ul>        
-    </aside>    
-    <article title="Main Article Content"> <!-- Main article content -->
-        <h1 id="top-of-page">Download: POPCNT Checker</h1>
-            <img src="popcnt_checker/popcnt.webp" alt="an image representing the POPCNT Checker, Says POPCNT is NOT supported on this processor.">
-                <p class="imgdescription">The Hackboto Tech Tips POPCNT Checker is really easy to use, just run it and it will tell you if your PC supports POPCNT.</p>
-            <h2 id="function">What Does the POPCNT Checker Do?</h2>
-                <p>The Hackboto Tech Tips POPCNT Checker is a small yet powerful program that will check if your PC supports the POPCNT CPU instruction set.</p>
-                <p>The POPCNT Checker can be handy for things like upgrading to Windows 11 on unsupported hardware, this is because one of the new requirements of the latest Windows 11 24H2 operating system is that your CPU supports POPCNT, if you upgrade and your PC does not support it, it will stop working.</p>
-            <h2 id="download">Downloading the POPCNT Checker</h2>
-                <p>You can download the check_popcnt.exe using the download button below, this should start the download process.</p>
-                <a class="linkbutton" title="Download check_popcnt.exe" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/check_popcnt.exe">Download check_popcnt.exe</a>
-                    <p><strong>Notice: You might find that the download is blocked, this is because it is a .exe program which has no publisher certification, this means that the browser cannot verify that the program is safe as it has not been created by an official software vendor.</strong></p>
-                <img src="popcnt_checker/download_blocked.webp" alt="Download blocked">
-                    <p>If the download is blocked, you need to hover over the download and click on the three dots "...", you then need to click "Keep".</p>
-                    <h2 id="how-to-use">How do I use the POPCNT Checker?</h2> 
-                <p>The popcnt_checker.exe is really easy to use, you just need to run it, and it will tell you if your computer supports the POPCNT instruction.</p>
-                <img src="popcnt_checker/open_check_popcnt.webp" alt="Download Menu">
-                <p>To run the popcnt_checker.exe, simply click "Open file" from the download menu or navigate to the download location and open it from there.</p>
-                <img src="popcnt_checker/popcntsupported.webp" alt="POPCNT is supported on this processor">
-                <p>When you run the check_popcnt.exe program you should see a message that reads "POPCNT is supported on this processor", this means that your PC supports the POPCNT instruction and will be able to run Windows 11 and other modern software applications that require POPCNT.</p>
-                <img src="popcnt_checker/popcnt.webp" alt="POPCNT is NOT supported on this processor">
-                <p>If your PC has this message "POPCNT is NOT supported on this processor", your PC does not support the POPCNT instruction.</p>
-        <hr> 
-        <p>Page Updated: 14/10/2024</p>
-        <p>Page Author: Hackboto</p>
-    </article>
-    <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="../map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="../legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer> 
+	<div class="sticky">
+		<header> <!--Header-->
+			<p>Hackboto Tech Tips</p>
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="../index.html" title="Go to Home">Home</a>
+				<a href="../pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="../mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="../download_centre.html" class="active" title="Find file downloads here.">Download Centre</a>
+				<a href="../contact.html" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+			<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	<aside title="Page Navigation">
+		<h2>Page Navigation</h2>
+		<hr>
+		<ul>
+			<li><a href="#top-of-page" title="Go To The Top Of Webpage">Go To Top</a></li>
+			<li><a href="#function" title="Jump to Function">Functions</a></li>
+			<li><a href="#download" title="Jump to download process">Download</a></li>
+			<li><a href="#how-to-use" title="Jump to user guide">User Guide</a></li>
+		</ul>        
+	</aside>    
+	<article title="Main Article Content">
+		<h1 id="top-of-page">Download: POPCNT Checker</h1>
+			<img src="popcnt_checker/popcnt.webp" alt="an image representing the POPCNT Checker, Says POPCNT is NOT supported on this processor.">
+				<p class="imgdescription">The Hackboto Tech Tips POPCNT Checker is really easy to use, just run it and it will tell you if your PC supports POPCNT.</p>
+			<h2 id="function">What Does the POPCNT Checker Do?</h2>
+				<p>The Hackboto Tech Tips POPCNT Checker is a small yet powerful program that will check if your PC supports the POPCNT CPU instruction set.</p>
+				<p>The POPCNT Checker can be handy for things like upgrading to Windows 11 on unsupported hardware, this is because one of the new requirements of the latest Windows 11 24H2 operating system is that your CPU supports POPCNT, if you upgrade and your PC does not support it, it will stop working.</p>
+			<h2 id="download">Downloading the POPCNT Checker</h2>
+				<p>You can download the check_popcnt.exe using the download button below, this should start the download process.</p>
+				<a class="linkbutton" title="Download check_popcnt.exe" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/check_popcnt.exe">Download check_popcnt.exe</a>
+				<br>
+			<h2 id="how-to-use">How do I use the POPCNT Checker?</h2> 
+				<p>The popcnt_checker.exe is really easy to use, you just need to run it, and it will tell you if your computer supports the POPCNT instruction.</p>
+				<img src="popcnt_checker/open_check_popcnt.webp" alt="Download Menu">
+				<p>To run the popcnt_checker.exe, simply click "Open file" from the download menu or navigate to the download location and open it from there.</p>
+				<img src="popcnt_checker/popcntsupported.webp" alt="POPCNT is supported on this processor">
+				<p>When you run the check_popcnt.exe program you should see a message that reads "POPCNT is supported on this processor", this means that your PC supports the POPCNT instruction and will be able to run Windows 11 and other modern software applications that require POPCNT.</p>
+				<img src="popcnt_checker/popcnt.webp" alt="POPCNT is NOT supported on this processor">
+				<p>If your PC has this message "POPCNT is NOT supported on this processor", your PC does not support the POPCNT instruction.</p>
+		<hr> 
+		<p>Page Updated: 02/03/2025</p>
+		<p>Page Author: Hackboto</p>
+	</article>
+	<footer class="asidefooter" title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!--Copyright-->
+		</div>
+		<div class="footerbuttons">
+			<a href="../map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="../legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer> 
 </body>
 </html>
