--- a/index.html
+++ b/index.html
@@ -1,74 +1,74 @@
 <!DOCTYPE html>
-<html lang="en-GB"> <!-- Define the language of the document -->
+<html lang="en-GB">
 <head>
-    <meta charset="UTF-8"> <!-- Define character encoding for the document -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the viewport for responsive design -->
-    <meta name="description" content="Hackboto Tech Tips offers help and advice on maintaining devices, buying the latest devices, and optimising existing devices, visit to learn more.">
-    <meta name="keywords" content="tech, tips, windows, help, advice, support, debloat">
-    <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
-    <meta name="google-site-verification" content="f8S6yQTL9ORzSZWiIDBfWoLoQwuuY6HW2ENlfExnMmo">
-    <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <link rel="canonical" href="https://hackbototechtips.github.io">
-    <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>Homepage | Hackboto Tech Tips</title> <!-- Document title -->
+	<meta charset="UTF-8"> <!--Encoding-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--responsive design-->
+	<meta name="description" content="Hackboto Tech Tips offers help and advice on maintaining devices, buying the latest devices, and optimising existing devices, visit to learn more.">
+	<meta name="keywords" content="tech, tips, windows, help, advice, support, debloat">
+	<meta name="robots" content="index, follow"> <!--search indexing-->
+	<meta name="google-site-verification" content="f8S6yQTL9ORzSZWiIDBfWoLoQwuuY6HW2ENlfExnMmo">
+	<link rel="stylesheet" href="stylesheet.css"> <!--stylesheet-->
+	<link rel="icon" type="image/x-icon" href="favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<link rel="canonical" href="https://hackbototechtips.github.io">
+	<script src="scripts.js"></script> <!--JavaScript file-->
+	<title>Homepage | Hackboto Tech Tips</title> <!--title-->
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="index.html" class="active" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
-                <a href="contact.html" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-    <br>
-    <section title="Main Content"> <!-- Main content section -->
-        <div class="welcometext">
-            <h1>Welcome to Hackboto Tech Tips</h1> <!-- Welcome text -->
-            <p>Hello and welcome to the Hackboto Tech Tips website, on this website you will find lots of little helpful tips and tricks regarding the tech you use and how you can make better use of it.</p> <!-- Introduction paragraph -->
-        </div>
-           <hr>
-        <div class="articles">
-            <h2>Why I started this website</h2> <!-- Section heading -->
-            <p>I have started the Hackboto Tech Tips website to share my useful tech knowledge with the world to help you make the most of your existing computing hardware and to share helpful tips and tricks regarding computing technologies.</p>
-            <div class="articlerow">
-                <div class="featuredarticle" title="The problems with Windows 11">
-                    <h3>Windows 11</h3> <!-- Article title -->
-                    <hr><!--Separator line-->
-                    <p>Windows 11 has artificial hardware requirements blocking it from installing onto older computers, most people do not know that their existing computers can run it, this is because Microsoft make a commission from most PC sales and will make money from you replacing your computer unnecessarily, thus polluting the planet in the process.</p>
-                </div>
-                <div class="featuredarticle" title="The problems with iPhone and Smartphones">
-                    <h3>iPhone and Smartphones</h3>
-                    <hr><!--Separator line-->
-                    <p>Is your old smartphone or iPhone really slow? Most new smartphones and iPhones only feel faster because they are new, your old devices are vertically the same, the only difference is that your old phone has become cluttered with old useless junk that is bogging it down, get rid of this junk and you will be surprised with how much better it will run.</p>
-                </div>
-                <div class="featuredarticle" title="The problems with advertising">
-                    <h3>Advertising</h3>
-                    <hr><!--Separator line-->
-                    <p>Everyone has heard of ads, but did you know that you can get rid of all those pesky ads from the games you play, from the websites you use, and even the ads built into your devices. You can install a DNS based adblocker for free and it will work on any of your devices, even your Smart TV, thus improving the performance of your devices and making them less frustrating to use.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer>
+	<div class="sticky">
+		<header> <!--Header-->
+			<p>Hackboto Tech Tips</p> 
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="index.html" class="active" title="Go to Home">Home</a>
+				<a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
+				<a href="contact.html" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	<br>
+    <section title="Main Content">
+		<div class="welcometext">
+			<h1>Welcome to Hackboto Tech Tips</h1>
+			<p>Hello and welcome to the Hackboto Tech Tips website, on this website you will find lots of little helpful tips and tricks regarding the tech you use and how you can make better use of it.</p>
+		</div>
+			<hr>
+		<div class="articles">
+			<h2>Why I started this website</h2>
+				<p>I have started the Hackboto Tech Tips website to share my useful tech knowledge with the world to help you make the most of your existing computing hardware and to share helpful tips and tricks regarding computing technologies.</p>
+			<div class="articlerow">
+				<div class="featuredarticle" title="The problems with Windows 11">
+					<h3>Windows 11</h3>
+					<hr>
+					<p>Windows 11 has artificial hardware requirements blocking it from installing onto older computers, most people do not know that their existing computers can run it, this is because Microsoft make a commission from most PC sales and will make money from you replacing your computer unnecessarily, thus polluting the planet in the process.</p>
+				</div>
+				<div class="featuredarticle" title="The problems with iPhone and Smartphones">
+					<h3>iPhone and Smartphones</h3>
+					<hr>
+					<p>Is your old smartphone or iPhone really slow? Most new smartphones and iPhones only feel faster because they are new, your old devices are vertically the same, the only difference is that your old phone has become cluttered with old useless junk that is bogging it down, get rid of this junk and you will be surprised with how much better it will run.</p>
+				</div>
+				<div class="featuredarticle" title="The problems with advertising">
+					<h3>Advertising</h3>
+					<hr>
+					<p>Everyone has heard of ads, but did you know that you can get rid of all those pesky ads from the games you play, from the websites you use, and even the ads built into your devices. You can install a DNS based adblocker for free and it will work on any of your devices, even your Smart TV, thus improving the performance of your devices and making them less frustrating to use.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!--Copyright-->
+		</div>
+		<div class="footerbuttons">
+			<a href="map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer>
 </body>
 </html>
