--- a/mobile_tips.html
+++ b/mobile_tips.html
@@ -1,62 +1,62 @@
 <!DOCTYPE html>
-<html lang="en-GB"> <!-- Define the language of the document -->
+<html lang="en-GB">
 <head>
-    <meta charset="UTF-8"> <!-- Define character encoding for the document -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the viewport for responsive design -->
-    <meta name="description" content="This is the Hackboto Tech Tips Mobile Guides page; this is where you find all of my tips and tricks helping you make the best use of your mobile.">
-    <meta name="keywords" content="iPhone, Android, Tips, Debloat, Adware, Remove, Optimise">
-    <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
-    <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>Mobile Guides | Hackboto Tech Tips</title> <!-- Document title -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="This is the Hackboto Tech Tips Mobile Guides page; this is where you find all of my tips and tricks helping you make the best use of your mobile.">
+	<meta name="keywords" content="iPhone, Android, Tips, Debloat, Adware, Remove, Optimise">
+	<meta name="robots" content="index, follow"> 
+	<link rel="stylesheet" href="stylesheet.css"> <!--stylesheet-->
+	<link rel="icon" type="image/x-icon" href="favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="scripts.js"></script> <!--JavaScript-->
+	<title>Mobile Guides | Hackboto Tech Tips</title>
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="mobile_tips.html" class="active" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
-                <a href="contact.html" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-    <br>
-    <section title="Mobile Phone Guides" > <!-- Section for Mobile Tips and Tricks -->
-        <div class="welcometext">
-            <h1>Mobile Phone Guides</h1> <!-- Page heading -->
-            <p>On this page you will find all my helpful tips and tricks regarding your mobile phone, you will find tips on reducing the number of ads you see, improving your mobile phone performance, getting the most out of your existing mobile phone, and much more.</p> <!-- Page description -->
-        </div>
-    </section>
-    <hr>
-    <section class="articles" title="Articles"> <!-- Section for articles -->
-        <h2>Guides</h2> <!-- Section heading -->
-        <div class="articlerow"> <!-- Article row -->
-            <div class="articlecolumn" title="Blocking ads on your mobile"> <!-- Article column -->
-                <h3>Blocking ads on your mobile</h3> <!-- Article title -->
-                    <hr>
-                <p>Are you getting sick of annoying ads on your mobile phone and tablet? Learn how you can block these annoying advertisements once and for all by changing your DNS provider.</p> <!-- Article excerpt -->
-                <a href="mobile_tips/dns_adblocker.html" title="View guide on Blocking ads on your mobile">View Guide</a> <!-- Link to full article -->
-            </div>
-        </div>
-    </section>
-    <footer title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer> 
+	<div class="sticky">
+		<header> <!--Header-->
+			<p>Hackboto Tech Tips</p>
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="index.html" title="Go to Home">Home</a>
+				<a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="mobile_tips.html" class="active" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
+				<a href="contact.html" title="Visit Contact page">Contact</a>
+		</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	<br>
+	<section title="Mobile Phone Guides" >
+		<div class="welcometext">
+			<h1>Mobile Phone Guides</h1>
+			<p>On this page you will find all my helpful tips and tricks regarding your mobile phone, you will find tips on reducing the number of ads you see, improving your mobile phone performance, getting the most out of your existing mobile phone, and much more.</p>
+		</div>
+	</section>
+	<hr>
+	<section class="articles" title="Articles">
+		<h2>Guides</h2>
+		<div class="articlerow">
+			<div class="articlecolumn" title="Blocking ads on your mobile">
+				<h3>Blocking ads on your mobile</h3>
+				<hr>
+				<p>Are you getting sick of annoying ads on your mobile phone and tablet? Learn how you can block these annoying advertisements once and for all by changing your DNS provider.</p>
+				<a href="mobile_tips/dns_adblocker.html" title="View guide on Blocking ads on your mobile">View Guide</a>
+			</div>
+		</div>
+	</section>
+	<footer title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!--Copyright-->
+		</div>
+		<div class="footerbuttons">
+			<a href="map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer> 
 </body>
 </html>
