--- a/pc_tips.html
+++ b/pc_tips.html
@@ -1,98 +1,98 @@
 <!DOCTYPE html>
-<html lang="en-GB"> <!-- Define the language of the document -->
+<html lang="en-GB">
 <head>
-    <meta charset="UTF-8"> <!-- Define character encoding for the document -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the viewport for responsive design -->
-    <meta name="description" content="This is the Hackboto Tech Tips PC Guides page, this is where you find all of my tips and tricks for optimising and making the best use of your PC.">
-    <meta name="keywords" content="Windows 11, Windows 10, Tips, Debloat, Adware, Remove, Optimise">
-    <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
-    <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="favicon.png">
-    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
-    <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>PC Guides | Hackboto Tech Tips</title> <!-- Document title -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="This is the Hackboto Tech Tips PC Guides page, this is where you find all of my tips and tricks for optimising and making the best use of your PC.">
+	<meta name="keywords" content="Windows 11, Windows 10, Tips, Debloat, Adware, Remove, Optimise">
+	<meta name="robots" content="index, follow">
+	<link rel="stylesheet" href="stylesheet.css"> <!--stylesheet-->
+	<link rel="icon" type="image/x-icon" href="favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="scripts.js"></script> <!--JavaScript-->
+	<title>PC Guides | Hackboto Tech Tips</title>
 </head>
 <body>
-    <div class="sticky">
-        <header> <!-- Header section -->
-            <p>Hackboto Tech Tips</p> <!-- Header text -->
-        </header>
-        <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
-            <div class="columnnav">
-                <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-                <a href="pc_tips.html" class="active" title="Explore tips and tricks for your PC">PC Guides</a>
-                <a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
-                <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
-                <a href="contact.html" title="Visit Contact page">Contact</a>
-            </div>
-            <div class="columnclose">
-                <div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div> <!-- Navigation hamburger icon -->
-            </div>
-        </nav>
-    </div>
-    <br>
-    <section title="PC Guides" > <!-- Section for PC Tips and Tricks -->
-        <div class="welcometext">
-            <h1>PC Guides</h1> <!-- Page heading -->
-            <p>On this page you will find all my helpful tips and tricks regarding your personal computer, you will find tips on reducing the number of ads you see, improving your system performance, getting the most out of your existing computer, and much more.</p> <!-- Page description -->
-        </div>
-    </section>
-    <hr>
-    <section class="articles" title="Articles"> <!-- Section for articles -->
-        <h2>Guides</h2> <!-- Section heading -->
-        <div class="articlerow"> <!-- Article row -->
-            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/upgradefrom10to11.webp);" title="Upgrading To Windows 11"> <!-- Article column -->
-                <h3>Upgrade to Windows 11 24H2</h3> <!-- Article title -->
-                <hr>
-                <p>Did you know that Windows 10 is EOL on 14/10/2025? You need to upgrade to Windows 11 continue receiving security updates, this guide will explain what you need know and what you need to do to upgrade to Windows 11.</p> <!-- Article excerpt -->
-                <a href="pc_tips/upgrading_to_windows11.html" title="Read More about upgrading to Windows 11">View Guide</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/windows_errors.webp);" title="Optimising Windows 10/ 11"> <!-- Article column -->
-                <h3>Optimising Windows 10/ 11</h3> <!-- Article title -->
-                <hr>
-                <p>Has your PC gotten very slow, are errors popping up all the time, is it taking you forever to get stuff done? If you are facing lacklustre performance and high levels of instability you should read on as this guide will explain how you can overcome these issues.</p> <!-- Article excerpt -->
-                <a href="pc_tips/windows_optimise.html" title="Read More about Optimising Windows 10/ 11">View Guide</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/debloat.webp);" title="Debloat Windows 11 24H2"> <!-- Article column -->
-                <h3>Debloat Windows 11 24H2</h3> <!-- Article title -->
-                <hr>
-                <p>Are you getting sick and tired of popups telling you to sign up for X Y Z, are you getting sick of constant notifications, and are you getting sick of poor performance from your PC, if so, read the guide.</p> <!-- Article excerpt -->
-                <a href="pc_tips/windows_debloat.html" title="Read about debloating Windows 11 24H2">View Guide</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/black_artefacts_mockup.webp);" title="Fix Hardware Acceleration Black Screen"> <!-- Article column -->
-                <h3>Fix Hardware Acceleration Black Screen</h3> <!-- Article title -->
-                <hr>
-                <p>Are you having issues with black screens, black boxes, black checkerboards etc on your Windows 10/ 11 PC? If you are, learn how you can fix the problem without disabling Hardware Acceleration.</p> <!-- Article excerpt -->
-                <a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">View Guide</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/computer_backup.webp);" title="Backing up your Windows 10/ 11 PC"> <!-- Article column -->
-                <h3>Backing up Windows 10/ 11</h3> <!-- Article title -->
-                    <hr>
-                <p>Do you regularly back up your files and computer system? If not, you need to start doing so in the event that your PC fails unexpectedly or becomes corrupted, learn about backing up your computer the correct way without the "Cloud".</p> <!-- Article excerpt -->
-                <a href="pc_tips/windows_backup.html" title="Learn About backing up your computer and your files.">View Guide</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/ads_everywhere.webp);" title="Blocking ads on your PC"> <!-- Article column -->
-                <h3>Blocking ads on your PC</h3> <!-- Article title -->
-                    <hr>
-                <p>Are you getting sick of long loading times, popups, and distracting adverts everywhere on the internet? If you are you should learn about the uBlock Origin browser extension and how you can get rid of annoying ads once and for all.</p> <!-- Article excerpt -->
-                <a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">View Guide</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" style="background-image: url(pc_tips/card_images/display_1_dxdiag.webp);" title="Finding WDDM Version"> <!-- Article column -->
-                <h3>Finding your WDDM Version</h3> <!-- Article title -->
-                    <hr>
-                <p>Do you need to find the WDDM Driver Model version for your computer? This guide will assist you in using the dxdiag tool to find your WDDM version.</p> <!-- Article excerpt -->
-                <a href="pc_tips/check_wddm_version.html" title="Learn about finding your WDDM version">View Guide</a> <!-- Link to full article -->
-            </div>
-        </div>
-    </section>
-    <footer title="Website Footer"> <!-- Footer section -->
-        <div class="footertext">
-            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
-        </div>
-        <div class="footerbuttons">
-            <a href="map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
-            <a href="legal.html" title="Go to Legal">Legal</a> <!-- Link to Legal Page -->
-        </div>
-    </footer> 
+	<div class="sticky">
+		<header> <!--Header-->
+			<p>Hackboto Tech Tips</p>
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="index.html" title="Go to Home">Home</a>
+				<a href="pc_tips.html" class="active" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
+				<a href="contact.html" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	<br>
+	<section title="PC Guides" >
+		<div class="welcometext">
+			<h1>PC Guides</h1>
+			<p>On this page you will find all my helpful tips and tricks regarding your personal computer, you will find tips on reducing the number of ads you see, improving your system performance, getting the most out of your existing computer, and much more.</p>
+		</div>
+	</section>
+	<hr>
+	<section class="articles" title="Articles">
+		<h2>Guides</h2>
+		<div class="articlerow">
+			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/upgradefrom10to11.webp);" title="Upgrading To Windows 11">
+				<h3>Upgrade to Windows 11 24H2</h3>
+				<hr>
+				<p>Did you know that Windows 10 is EOL on 14/10/2025? You need to upgrade to Windows 11 continue receiving security updates, this guide will explain what you need know and what you need to do to upgrade to Windows 11.</p>
+				<a href="pc_tips/upgrading_to_windows11.html" title="Read More about upgrading to Windows 11">View Guide</a>
+			</div>
+			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/windows_errors.webp);" title="Optimising Windows 10/ 11">
+				<h3>Optimising Windows 10/ 11</h3>
+				<hr>
+				<p>Has your PC gotten very slow, are errors popping up all the time, is it taking you forever to get stuff done? If you are facing lacklustre performance and high levels of instability you should read on as this guide will explain how you can overcome these issues.</p>
+				<a href="pc_tips/windows_optimise.html" title="Read More about Optimising Windows 10/ 11">View Guide</a>
+			</div>
+			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/debloat.webp);" title="Debloat Windows 11 24H2">
+				<h3>Debloat Windows 11 24H2</h3>
+				<hr>
+				<p>Are you getting sick and tired of popups telling you to sign up for X Y Z, are you getting sick of constant notifications, and are you getting sick of poor performance from your PC, if so, read the guide.</p>
+				<a href="pc_tips/windows_debloat.html" title="Read about debloating Windows 11 24H2">View Guide</a>
+			</div>
+			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/black_artefacts_mockup.webp);" title="Fix Hardware Acceleration Black Screen">
+				<h3>Fix Hardware Acceleration Black Screen</h3>
+				<hr>
+				<p>Are you having issues with black screens, black boxes, black checkerboards etc on your Windows 10/ 11 PC? If you are, learn how you can fix the problem without disabling Hardware Acceleration.</p>
+				<a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">View Guide</a>
+			</div>
+			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/computer_backup.webp);" title="Backing up your Windows 10/ 11 PC">
+				<h3>Backing up Windows 10/ 11</h3>
+				<hr>
+				<p>Do you regularly back up your files and computer system? If not, you need to start doing so in the event that your PC fails unexpectedly or becomes corrupted, learn about backing up your computer the correct way without the "Cloud".</p>
+				<a href="pc_tips/windows_backup.html" title="Learn About backing up your computer and your files.">View Guide</a>
+			</div>
+			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/ads_everywhere.webp);" title="Blocking ads on your PC">
+				<h3>Blocking ads on your PC</h3>
+				<hr>
+				<p>Are you getting sick of long loading times, popups, and distracting adverts everywhere on the internet? If you are you should learn about the uBlock Origin browser extension and how you can get rid of annoying ads once and for all.</p>
+				<a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">View Guide</a>
+			</div>
+			<div class="articlecolumn" style="background-image: url(pc_tips/card_images/display_1_dxdiag.webp);" title="Finding WDDM Version">
+				<h3>Finding your WDDM Version</h3>
+				<hr>
+				<p>Do you need to find the WDDM Driver Model version for your computer? This guide will assist you in using the dxdiag tool to find your WDDM version.</p>
+				<a href="pc_tips/check_wddm_version.html" title="Learn about finding your WDDM version">View Guide</a>
+			</div>
+		</div>
+	</section>
+	<footer title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!--Copyright-->
+		</div>
+		<div class="footerbuttons">
+			<a href="map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer> 
 </body>
 </html>
